--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     •276 542
-    <li><a href="https://minecraft-inside.ru//">Прокачка</a></li>
-    <li><a href="https://kraioko.perm.ru/user/ptests/">Доход</a></li>
+    <li><a href="https://www.google.com/search?q=%D0%BA%D0%BD%D0%BE%D0%BF%D0%BA%D0%B0+1&oq=%D0%BA%D0%BD%D0%BE%D0%BF%D0%BA%D0%B0+1&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIHCAIQABiABDIHCAMQABiABDIHCAQQABiABDIHCAUQABiABDIHCAYQABiABDIHCAcQABiABDIHCAgQABiABDIHCAkQABiABNIBCTQyNTVqMGoxNagCCLACAQ&sourceid=chrome&ie=UTF-8">Прокачка</a></li>
+    <li><a href="https://www.google.com/search?q=%D0%BA%D0%BD%D0%BE%D0%BF%D0%BA%D0%B0+2&sca_esv=b1f6889afc73a5b3&sca_upv=1&sxsrf=ADLYWILgqya5LKN-kYH97H00wOIAUcLAbA%3A1718368035733&ei=IzdsZq-4LJLDwPAPxfqN8Ak&udm=&ved=0ahUKEwjv1fPii9uGAxWSIRAIHUV9A54Q4dUDCBA&uact=5&oq=%D0%BA%D0%BD%D0%BE%D0%BF%D0%BA%D0%B0+2&gs_lp=Egxnd3Mtd2l6LXNlcnAiDtC60L3QvtC_0LrQsCAyMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABEjnF1C-FVipFnACeAGQAQCYAYABoAHtAaoBAzAuMrgBA8gBAPgBAZgCBKACrwLCAgoQABiwAxjWBBhHwgIKEAAYgAQYQxiKBcICCxAAGIAEGLEDGIMBmAMAiAYBkAYIkgcDMi4yoAfzCw&sclient=gws-wiz-serp">Доход</a></li>
   </body>
 </html>
